src/pages/home/SpaceHome.css
.home__hero {
  background-image: url("../../../public/assets/home/background-home-mobile.jpg");
}

.hero__text {
  text-align: center;
}

.hero__intro__text {
  font-family: "Barlow Condensed";
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 19px;
  letter-spacing: 2.7px;
  text-transform: uppercase;
  color: var(--Text-color);
  font-weight: 400;
}

.hero__heading {
  text-transform: uppercase;
}

.hero__explore {
  padding: 1rem;
  width: 150px;
  height: 150px;
  border-radius: 50%;
  background-color: var(--Clr-white);

  display: flex;
  align-items: center;
  justify-content: center;

  position: absolute;
  top: 70%;
  left: 50%;
  transform: translateX(-50%);
}

.hero__explore p {
  color: var(--Dark-text);
  font-family: "Bellefair";
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 23px;
  letter-spacing: 1.25px;
}

/* tablet screen style */
@media screen and (min-width: 41.25rem) {
  .home__hero {
    background-image: url("../../../public/assets/home/background-home-tablet.jpg");
    padding: 10.5rem 1rem;
  }

  .hero__text {
    max-width: 28.13rem;
    margin: 0 auto;
  }

  .hero__heading {
    margin-block: 1rem;
  }

  .hero__explore {
    top: 75%;
  }
}

/*desktop screen style*/

@media screen and (min-width: 60rem) {
  .home__hero {
    background-image: url("../../../public/assets/home/background-home-desktop.jpg");
    padding: 8.5rem 1rem;
  }

  .hero__text {
    text-align: left;
  }

  .home__hero .wrapper {
    position: relative;
  }

  .hero__content__container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    place-items: center;

    position: absolute;
    width: 100%;
    height: calc(100vh - 13.34rem);
  }

  .hero__content__container > div {
    align-self: self-end;
  }

  .hero__heading {
    margin: 2rem 0 2.5rem 0;
  }

  .hero__explore {
    position: static;
  }
}

